# hello-cmake

./: CMakeLists.txt  COPYRIGHT.md  INSTALL.md  LICENSE  README.md
subproject/: CMakeLists.txt
